tests/parser/bad/lib/lmodule-library-with.scillib
(* should be 'TestLib' instead*)
library _TestLib

type House =
| Kind of String
